# sepa-xml-editor

./: Justfile  LICENSE  README.md
docs/: index.html
docs/assets/: index-7c9Istw6.css  index-BBFJb9ao.css  index-CSsSJen0.js  index-CXkR8Fjb.js  index-CuNq3wwo.js  index-Czie-TrU.css  index-D24BXdNo.js  index-DhQAzA6Q.js  index-SvPFB83B.js  index-bB4yNN2A.css  index-bOL7PrVz.js  index-gEQSxw3z.css  sepa_xml_editor_core_bg-B0cVAfTx.wasm  sepa_xml_editor_core_bg-CMljVB93.wasm  sepa_xml_editor_core_bg-INMg4g7m.wasm
gh-pages/: index.html
gh-pages/assets/: sepa_xml_editor_core_bg-DSAx0f77.wasm
sepa-xml-editor-core/: .gitignore  Cargo.toml
sepa-xml-editor-core/src/: lib.rs
sepa-xml-editor-spa/: README.md  index.html  package-lock.json  package.json  vite.config.ts
sepa-xml-editor-spa/src/: App.vue  main.ts
sepa-xml-editor-spa/src/assets/: base.css  main.css
