[package]
name = "sepa-xml-editor-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
quick-xml = { version = "0.37.1", features = ["serde", "serialize"] }
rust_decimal = { version = "1.36.0", features = ["serde-with-str"] }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.215", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.99"
